Begin separating game logic between GameController and CoreGameManager.
The GameController and CoreGameManager classes are tightly coupled, this commit is the first step to separating game logic between the problematic classes.